apps/channels-dvr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: channels-dvr
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
