apps/channels-dvr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: channels-dvr
  namespace: channels-dvr
spec:
  type: LoadBalancer
  selector:
    app: channels-dvr
  ports:
  - port: 8089
    targetPort: 8089
    name: http
