apps/channels-dvr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: channels-dvr
  namespace: channels-dvr
spec:
  ingressClassName: traefik
  rules:
  - host: dvr.treympick.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: channels-dvr
            port:
              number: 8089
